force-app/main/default/objects/rstk__wocst__c/fields/FMG_On_Hand_Qty__c.field-meta.xml
<CustomField>
    <fullName>FMG_On_Hand_Qty__c</fullName>
    <formula>rstk__wocst_item__r.FMG_On_Hand_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Hand Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>