force-app/main/default/objects/rstk__wocst__c/fields/FMG_Pct_of_SS_OH__c.field-meta.xml
<CustomField>
    <fullName>FMG_Pct_of_SS_OH__c</fullName>
    <formula>rstk__wocst_item__r.FMG_Pct_of_SS_OH__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of SS OH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>