force-app/main/default/objects/rstk__wocst__c/fields/FMG_Safety_Stock_Qty__c.field-meta.xml
<CustomField>
    <fullName>FMG_Safety_Stock_Qty__c</fullName>
    <formula>rstk__wocst_item__r.rstk__icitem_sspolqty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safety Stock Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>