force-app/main/default/objects/rstk__wocst__c/listViews/Closed_Work_Orders.listView-meta.xml
<ListView>
    <fullName>Closed_Work_Orders</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>rstk__wocst_item__c</columns>
    <columns>rstk__wocst_div__c</columns>
    <columns>rstk__wocst_disassmind__c</columns>
    <columns>rstk__wocst_ordno__c</columns>
    <columns>rstk__wocst_qtyreq__c</columns>
    <columns>rstk__cp_upd_dmd_qtyreq__c</columns>
    <columns>rstk__wocst_reworkind__c</columns>
    <columns>rstk__wocst_proj__c</columns>
    <columns>rstk__wocst_closed__c</columns>
    <columns>rstk__wocst_ordsts_pl__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>rstk__wocst_qtyacc__c</columns>
    <columns>rstk__wocst_duedte__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>rstk__wocst_ordsts__c</field>
        <operation>equals</operation>
        <value>9</value>
    </filters>
    <label>Closed Work Orders</label>
</ListView>