force-app/main/default/objects/rstk__wocst__c/listViews/RS_Debug.listView-meta.xml
<ListView>
    <fullName>RS_Debug</fullName>
    <columns>NAME</columns>
    <columns>rstk__wocst_item__c</columns>
    <columns>rstk__wocst_ordsts__c</columns>
    <columns>rstk__wocst_qtyreq__c</columns>
    <columns>rstk__wocst_qtyacc__c</columns>
    <columns>rstk__wocst_duedte__c</columns>
    <columns>rstk__wocst_refurbind__c</columns>
    <columns>rstk__wocst_reworkind__c</columns>
    <columns>rstk__wocst_disassmind__c</columns>
    <filterScope>Everything</filterScope>
    <label>RS Debug</label>
</ListView>