force-app/main/default/objects/rstk__wocst__c/listViews/Work_Orders_CRP.listView-meta.xml
<ListView>
    <fullName>Work_Orders_CRP</fullName>
    <columns>NAME</columns>
    <columns>rstk__wocst_item__c</columns>
    <columns>rstk__wocst_ordsts__c</columns>
    <columns>rstk__wocst_qtyreq__c</columns>
    <columns>rstk__wocst_qtyacc__c</columns>
    <columns>rstk__wocst_duedte__c</columns>
    <columns>rstk__wocst_refurbind__c</columns>
    <columns>rstk__wocst_reworkind__c</columns>
    <columns>rstk__wocst_disassmind__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>rstk__wocst_item__c</field>
        <operation>contains</operation>
        <value>DB0797V,BP-INGST</value>
    </filters>
    <label>Work Orders CRP</label>
</ListView>